--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "@mui/stylis-plugin-rtl": "^7.1.0",
     "@tanstack/react-query": "^5.80.10",
     "axios": "^1.10.0",
-    "country-flag-icons": "^1.5.19",
     "next": "^15.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
     "react-icons": "^5.5.0",
     "stylis": "^4.3.6",
+    "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.25.67"
